2010-02-15  Benjamin Lindner  <lindnerb@users.sourceforge.net>

	* src/win/wgnuplib.h src/win/wgraph.c term/win.trm: Add the option
	"close" to the windows terminal driver. Update documentation
	accordingly.

2010-02-15  Benjamin Lindner  <lindnerb@users.sourceforge.net>

	* term/win.trm: Fix for windows terminal ignoring explicit fontname and
	size for labels.

2010-02-15  Benjamin Lindner  <lindnerb@users.sourceforge.net>

	* src/win/wmenu.c (SendMacro): Bugfix in call to _getcwd.

2010-02-15  Benjamin Lindner  <lindnerb@users.sourceforge.net>

	* term/win.trm: Add the options "size" and "position" to the windows
	terminal driver. Update documentation accordingly.

2010-02-15  Benjamin Lindner  <lindnerb@users.sourceforge.net>

	* src/win/wgraph.c src/win/wresourc.h: Add the possibility to
	save the current graph window as EMF file. Add a Ctrl+S shortcut for
	the graph window and add an entry to the window's system menu.
	
	* term/win.trm: Update documentation accordingly.

2010-02-15  Benjamin Lindner  <lindnerb@users.sourceforge.net>

	* src/win/wgraph.c: Update code to copy to clipboard as enhanced
	metafile, add Ctrl+C shortcut for graph window.
	
	* term/win.trm: Update documentation accordingly.

2010-02-15  Ethan A Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc src/gadgets.h src/graphics.c src/save.c
	src/set.c src/show.c: New style option (candlesticks or
	financebars) for 'with boxplots'. Apply the current setting of
	'set bars' to boxplots drawn in candlestick style.

2010-02-12  Ethan A Merritt  <merritt@u.washington.edu>

	* src/set.c (set_obj): Sanity check start and end angles of arc.

2010-02-11  Ethan A Merritt  <merritt@u.washington.edu>

	* src/graphics.c (plot_boxes): Amazingly old bug that fails to apply 
	absolute boxwidth in the case where previous point was undefined.

2010-02-10  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* docs/gnuplot-ja.doc docs/term-ja.diff:
	Sync Japanese documentation to gnuplot.doc rev 1.598
