@@ -1,4 +1,4 @@
-C RCS $Id: gnuplot.doc,v 1.599 2010/02/15 19:01:06 sfeam Exp $
+C RCS $Id: gnuplot.doc,v 1.600 2010/02/17 06:19:00 sfeam Exp $
 C
 C Copyright (C) 1986 - 1993, 1998, 1999, 2000, 2001, 2004   Thomas Williams, Colin Kelley et al.
 C
@@ -2718,19 +2718,38 @@ Ffigure_candlesticks
 ?circles
 Ffigure_circles
  The `circles` style plots a circle with an explicit radius at each data point.
- Three columns of data are required: x, y, radius.  An optional 4th column may
- be used to specify color information.  The radius is always interpreted in the
- units of the plot's horizontal axis (x or x2).  The scale on y and the aspect
- ratio of the plot are both ignored.
+ Three columns of data are required: x, y, radius.  By default a full circle
+ will be drawn.  It is possible to plot circle segments instead of full
+ circles by specifying the start and end angle in the 4th and 5th column.
+ An optional 4th or 6th column may be used to specify color information.
+ The radius is always interpreted in the units of the plot's horizontal axis
+ (x or x2).  The scale on y and the aspect ratio of the plot are both ignored.
+ The start and end angles of the circle segments must be specified in degrees.
 
- Example (draws circles whose area is proportional to the value in column 3):
 
+ Examples:
+ 
+     # draws circles whose area is proportional to the value in column 3
      set style fill transparent solid 0.2 noborder
      plot 'data' using 1:2:(sqrt($3)) with circles, \
           'data' using 1:2 with linespoints
 
+     # draws Pac-men instead of circles
+     plot 'data' using 1:2:(10):(40):(320) with circles
+     
+     # draw a pie chart with inline data
+     set xrange [-15:15]
+     set style fill transparent solid 0.9 noborder
+     plot '-' using 1:2:3:4:5:6 with circles lc var
+     0    0    5    0    30    1
+     0    0    5   30    70    2
+     0    0    5   70   120    3
+     0    0    5  120   230    4
+     0    0    5  230   360    5
+     e
+
  The result is similar to using a `points` plot with variable size points and
- pointstyle 6, except that the circles will scale with the x axis range.
+ pointstyle 7, except that the circles will scale with the x axis range.
  See also `set object circle` and `fillstyle`.
 2 dots
 ?commands set style dots
