@@ -1,3 +1,9 @@
+2010-02-16  Peter Juhasz
+
+	* src/graphics.c src/plot2d.c src/term.c docs/gnuplot.doc
+	demo/circles.dem demo/energy_circles.dat:  Extend plot style
+	"with circles" to allow optional start and end values for each arc.
+
 2010-02-15  Benjamin Lindner  <lindnerb@users.sourceforge.net>
 
 	* src/win/wgnuplib.h src/win/wgraph.c term/win.trm: Add the option
